--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "oriented-programing",
+  "name": "oriented-programing-logo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "inquierer": "^8.2.4",
+    "jest": "^29.6.1"
+  }
 }
