--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquierer": "^8.2.4",
-    "jest": "^29.6.1"
+    "inquirer": "^8.2.4",
+    "jest": "^29.6.2"
   }
 }
